--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,26 @@
-node_modules
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/.pnp
+/node_modules
+.pnp.js
+
+#Dependencias
+.env
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
 .DS_Store
-dist
-dist-ssr
-*.local
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
